--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chuakz Tim</title>
     <style>
         table {text-align: center; border: 1000% solid black; border-collapse: collapse; justify-content: center;}
         body {align-items: center; text-align: center; background-image: url(spidermanlogo.jpg); background-repeat: inherit; background-position: center; background-size: 100%;}
