--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
 <div class="video">
     <div>
         <video width="320" height="240" controls>
-        <source src="C:\Users\pc1vt\Downloads\coba koding\jobsheet kelas 11\kegiatan Chuakz kuat\WhatsApp Video 2023-07-21 at 11.12.19 (1).mp4" type="video/mp4">
+                <source src="WhatsApp Video 2023-07-21 at 11.12.19 (1).mp4" type="video/mp4">
         Maaf, browser Anda tidak mendukung pemutaran video.</video>            
     </div>
     <div>
         <video width="320" height="240" controls>
-        <source src="C:\Users\pc1vt\Downloads\coba koding\jobsheet kelas 11\kegiatan Chuakz kuat\WhatsApp Video 2023-07-21 at 11.12.19.mp4" type="video/mp4">
+                <source src="WhatsApp Video 2023-07-21 at 11.12.19.mp4" type="video/mp4">
         Maaf, browser Anda tidak mendukung pemutaran video.</video>
     </div>
 </div>
