--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <img width="320" height="240" src="WhatsApp Image 2023-07-21 at 11.12.19.jpeg">
         </div>
         <div>
-            <img width="320" height="240" src="C:\Users\pc1vt\Downloads\coba koding\jobsheet kelas 11\kegiatan Chuakz kuat\WhatsApp Image 2023-07-21 at 11.12.19 (1).jpeg">
+                        <img width="320" height="240" src="WhatsApp Image 2023-07-21 at 11.12.19 (1).jpeg">
         </div>
     </div>
 <!--video-->
