--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             .member {background-color: rgba(255, 0, 0, 0.363); color: white}
             .jadwal-piket {align-items: center; margin-left: 20px; margin-right: 5px; background-color: rgba(255, 0, 0, 0.363); border-color: white; color: white; display: inline-block;}
             /*foto*/
-            .foto {margin-left: -45px; margin-right: 5px;}
+            .foto {margin-left: 5%; margin-right: 5%;}
             img {align-items: center; justify-content: center; width: 160px; height: 120px;}
             .foto div {background-color: rgba(255, 0, 0, 0.247); border: 1px solid black; width: 180px; height: 120px; display: inline-block; border-color: white; margin-left: 10px; margin-right: 10px;}
             /*piket*/
@@ -279,7 +279,7 @@
             <img width="320" height="240" src="WhatsApp Image 2023-07-21 at 11.12.19.jpeg">
         </div>
         <div>
-                        <img width="320" height="240" src="WhatsApp Image 2023-07-21 at 11.12.19 (1).jpeg">
+            <img width="320" height="240" src="WhatsApp Image 2023-07-21 at 11.12.19 (1).jpeg">
         </div>
     </div>
 <!--video-->
