--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             .ikan-berjalan {background-color: rgba(0, 0, 0, 0.56); color: rgb(255, 255, 255); width: auto;}
             /*lagu*/
             audio { width: 160px; height: 120px; color: rgba(255, 0, 0, 0.313)}
-            /*video hp*/
+            /*video tablet*/
             video {align-items: center; justify-content: center; margin-left: 5px; margin-right: 5px;margin-top: -10px; width: 160px; height: 120px;}
             .video {align-items: center; margin-left: 5%; margin-right: 10%;}
             .video div {background-color: rgba(255, 0, 0, 0.247); border: 2px solid black; width: 180px; height: 120px; display: inline-block; border-color: white; margin-left: 10px; margin-right: 10px;}
@@ -98,7 +98,6 @@
 <!-- tombol-->
 <div>
         <button onclick="showDaftar()">Tampilkan Daftar</button>      
-    <br>
     <div class="daftar" id="daftarDiv">
         <button onclick="quitDaftar()" class="quit-button">X</button>    
         <!-- Mapel -->
