--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="ikan-berjalan">
         <marquee behavior="scroll" direction="left" scrollmount="6">Chuakz Rajin,Chuakz Baik,Chuakz Hebat, Chuakz Nyuakz, Chuakz Cerdas, Subscribe Wild_AN_Azhar</marquee>
     </div>
-    <audio controls autoplay>
+    <audio autoplay>
         <source src="self-love.mp3" type="audio/mp3">
     </audio>
 <!-- tombol-->
@@ -284,12 +284,12 @@
 <!--video-->
 <div class="video">
     <div>
-        <video width="320" height="240" controls>
+        <video width="320" height="240" autoplay>
                 <source src="WhatsApp Video 2023-07-21 at 11.12.19 (1).mp4" type="video/mp4">
         Maaf, browser Anda tidak mendukung pemutaran video.</video>            
     </div>
     <div>
-        <video width="320" height="240" controls>
+        <video width="320" height="240" autoplay>
                 <source src="WhatsApp Video 2023-07-21 at 11.12.19.mp4" type="video/mp4">
         Maaf, browser Anda tidak mendukung pemutaran video.</video>
     </div>
