--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="ikan-berjalan">
         <marquee behavior="scroll" direction="left" scrollmount="6">Chuakz Rajin,Chuakz Baik,Chuakz Hebat, Chuakz Nyuakz, Chuakz Cerdas, Subscribe Wild_AN_Azhar</marquee>
     </div>
-    <audio autoplay>
+    <audio controls autoplay>
         <source src="self-love.mp3" type="audio/mp3">
     </audio>
 <!-- tombol-->
